Canto 0.5.1 ChangeLog
* Fixed progressing memory leak
* Hooks/filters are now wrapped in an exception logging wrapper.
* noitem_unsafe decorator applied to all Gui() functions that can't
	be used without any items
* Fixed uninitialized variable causing crash.

Canto 0.5.0 ChangeLog
* New dependency on feedparser and chardet.
* Global and per-feed filters implemented.
* Hooks, to call code on events (like new items, changing selection, etc.)
* Entirely changed, much less fragile on-disk format.
* Canto and canto-fetch are now a single, multi-call binary
* Canto-fetch no longer has its own config
* More useful keybinds, support lists of actions and arbitrary functions.
* Per-feed renderers can be configured.
* Story items now include all content, rather than just title/link/description
	(pretty useful for neat per-feed renderers, thanks to feedparser)
* Reader is now prettier, and more correct.
* Canto.extra is provided for nice helper functions for your config.
* Code documentation is much improved
* Code organization is more logical
* Proper locking between multiple instances of canto/canto-fetch.
* Entirely backwards compatible with 0.4.0 configs

Canto 0.4.8 ChangeLog
* Fix minor search problem
* Move title_key logic into canto_fetch

Canto 0.4.7 ChangeLog
* Fix HTML entities in story titles.
* Prioritize read over unread stories on disk.
* Remove --delete, canto-fetch cleans up automatically.
* Add vim-like (j/k) scrolling default bindings.
* Theme cleanups, interpret more HTML tags.
* Add User-Agent request header, fixing feeds like Google News.
* Add next/prev_unread bindings (default to ./,)

Canto 0.4.6 ChangeLog
* More title_key fixups.
* Move entity parsing to client, for more correct handling.
* Add basic list handling to reader.

Canto 0.4.5 ChangeLog
* Fix html entity crash
* Improve reader internal link detection
* Fix title_key behavior
* Minor theme fix for collapsed feeds

Canto 0.4.4.1 ChangeLog
* Quick fix for conf.example generation/use.
